# raytracer

./: CMakeLists.txt  features.md
lib/: bmp.h
src/: camera.cpp  camera.h  config.h  light.h  main.cpp  material.h  math.h  ray.cpp  ray.h  scene.cpp  scene.h
